--- a/templates/lista_reservas.html
+++ b/templates/lista_reservas.html
@@ -2,29 +2,58 @@
 
 {% block content %}
 <h1>Lista de Reservas</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>CNPJ</th>
-            <th>Nome</th>
-            <th>Categoria</th>
-            <th>Quitado</th>
-            <th>Opções</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for reserva in reservas %}
-        <tr>
-            <td>{{ reserva.cnpj }}</td>
-            <td>{{ reserva.nome }}</td>
-            <td>{{ reserva.categoria }}</td>
-            <td>{% if reserva.quitado %}Sim{% else %}Não{% endif %}</td>
-            <td>
-                <a href="{% url 'atualizar_reserva' reserva.pk %}" class="btn btn-sm btn-warning">Editar</a>
-                <a href="{% url 'excluir_reserva' reserva.pk %}" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-6">
+        <form method="GET" action="{% url 'lista_reservas' %}">
+            <div class="form-group">
+                <label for="nome_da_empresa">Nome da Empresa</label>
+                <input type="text" name="nome_da_empresa" id="nome_da_empresa" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="quitado">Quitado</label>
+                <select name="quitado" id="quitado" class="form-control">
+                    <option value="">Todos</option>
+                    <option value="1">Sim</option>
+                    <option value="0">Não</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="stand_valor">Valor do Stand</label>
+                <input type="text" name="stand_valor" id="stand_valor" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="data_reserva">Data da Reserva</label>
+                <input type="date" name="data_reserva" id="data_reserva" class="form-control">
+            </div>
+            <button type="submit" class="btn btn-primary mt-2">Filtrar</button>
+        </form>
+    </div>
+    <div class="col-6">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>CNPJ</th>
+                    <th>Nome</th>
+                    <th>Categoria</th>
+                    <th>Quitado</th>
+                    <th>Opções</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for reserva in reservas %}
+                <tr>
+                    <td>{{ reserva.cnpj }}</td>
+                    <td>{{ reserva.nome }}</td>
+                    <td>{{ reserva.categoria }}</td>
+                    <td>{% if reserva.quitado %}Sim{% else %}Não{% endif %}</td>
+                    <td>
+                        <a href="{% url 'atualizar_reserva' reserva.pk %}" class="btn btn-sm btn-warning">Editar</a>
+                        <a href="{% url 'excluir_reserva' reserva.pk %}" class="btn btn-sm btn-danger">Excluir</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 {% endblock %}
